[package]
name = "sbplug"
version = "0.0.3"
edition = "2021"
authors = ["Takatomo Ezo <takatomo@e20.jp>"]
license = "MIT OR Apache-2.0"
keywords = ["switchbot", "cli"]
description = "CLI tool to control SwitchBot Plug."
homepage = "https://github.com/ezotaka/sbplug"
repository = "https://github.com/ezotaka/sbplug.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
structopt = "0.3.21"
